<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewTicketActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:background="@color/cardBackground">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/Text"
        android:layout_width="0dp"
        android:text="@string/ticket_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleTextView"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/brief_textview"
        style="@style/Text"
        android:layout_marginTop="24dp"
        android:text="@string/ticket_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="12"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="4"
        app:layout_constraintBaseline_toBaselineOf="@id/brief_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/brief_textview"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/customerTextView"
        style="@style/Text"
        android:layout_marginTop="24dp"
        android:text="@string/customerName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <TextView
        android:id="@+id/nameTextView"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:ems="12"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/customerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/customerTextView"
        app:layout_constraintStart_toEndOf="@+id/customerTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getCustomerButton"
        android:onClick="getCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/get_customer_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerTextView" />

    <TextView
        android:id="@+id/priorityTextView"
        style="@style/Text"
        android:layout_marginTop="24dp"
        android:text="@string/priority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getCustomerButton" />

    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:entries="@array/priority_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/priorityTextView"
        app:layout_constraintTop_toTopOf="@+id/priorityTextView" />

    <TextView
        android:id="@+id/departmentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/department"
        style="@style/Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityTextView" />

    <Spinner
        android:id="@+id/departmentSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/departmentTextView"
        app:layout_constraintTop_toTopOf="@id/departmentTextView" />

    <Button
        android:id="@+id/createTicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_ticket"
        android:onClick="createTicket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:background="@android:color/black" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="visible"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>