<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/ticketImageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:justifyContent="space_around">

            <ImageView
                android:id="@+id/ticketImageView1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_insert_photo"
                android:contentDescription="@string/ticket_image_content_description" />

            <ImageView
                android:id="@+id/ticketImageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_insert_photo"
                android:contentDescription="@string/ticket_image_content_description" />

            <ImageView
                android:id="@+id/ticketImageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_insert_photo"
                android:contentDescription="@string/ticket_image_content_description" />

        </com.google.android.flexbox.FlexboxLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorAccent"/>

            <TextView
                android:id="@+id/bodyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/large_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="normal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/first_name_last_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/departmentTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/department"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>