<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardBackground"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteEditText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top"
            android:hint="@string/note_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/attachmentButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/attachment_button_content_description"
        android:src="@drawable/ic_attach_file"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/submitButton"
        app:layout_constraintTop_toBottomOf="@+id/textField" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/imageContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:justifyContent="space_evenly"
        app:layout_constraintEnd_toStartOf="@+id/attachmentButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:contentDescription="@string/added_image_content_description"
            app:srcCompat="@drawable/ic_insert_photo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:contentDescription="@string/added_image_content_description"
            app:srcCompat="@drawable/ic_insert_photo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:contentDescription="@string/added_image_content_description"
            app:srcCompat="@drawable/ic_insert_photo" />

    </com.google.android.flexbox.FlexboxLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageContainer">

        <ProgressBar
            android:id="@+id/determinateProgressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="8dp"
            android:progress="25"
            android:progressBackgroundTint="@color/colorPrimaryDark"
            android:progressTint="@color/colorAccent" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/determinateProgressBar"
            android:layout_marginTop="4dp"
            android:layout_alignParentEnd="true"
            app:justifyContent="space_around">

            <TextView
                android:id="@+id/imageNumberTextView"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                tools:ignore="HardcodedText" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/totalImageCountTextView"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                tools:ignore="HardcodedText" />
        </com.google.android.flexbox.FlexboxLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>